--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -10,4 +10,13 @@
     margin-left: auto;
     margin-right: auto;
   }
-  
+  .img {
+    display: block;
+    width: 400px;
+    height: 594px;
+  }
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
